# pitmon

./: .gitignore  GETTING_STARTED.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  TODO.md  __init__.py  demo.py  example_weather.py  live.main.tex  monitor.py  pitmon.py  pitmonitor.py  pyproject.toml  setup.py  test_pitmon.py
core/: monitor.py  setup.py
examples/: cifar_demo.ipynb  delivery_demo.ipynb  delivery_nn.py  delivery_times.py  demo.py  demo_comprehensive.py  example_financial.py  example_real_stock.py  example_real_weather.py  example_weather.py  nn_demo.ipynb
experiment/: config.py  data.py  detectors.py  experiment.py  model.py  plots.py  run.py  run_experiment.py  train_model.py  verify_model.py
experiment_v1/: config.py  plots.py
experiment_v2/: config.py  data.py  detectors.py  experiment.py  model.py  plots.py  run.py
paper/: Monitoring Calibration Drift in Machine Learning Models with Anytime-Valid Guarantees.aux  Monitoring Calibration Drift in Machine Learning Models with Anytime-Valid Guarantees.fdb_latexmk  Monitoring Calibration Drift in Machine Learning Models with Anytime-Valid Guarantees.fls  Monitoring Calibration Drift in Machine Learning Models with Anytime-Valid Guarantees.tex  VENUES.md  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.aux  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.fdb_latexmk  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.fls  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.out  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.synctex(busy)  When Your Model Stops Working - Anytime-Valid Calibration Monitoring.tex  When Your Model Stops Working: Anytime-Valid Calibration Monitoring.aux  export_for_arxiv.sh  live.main.aux  (+19 more)
(+65 files in other folders)
