[project]
name = "pitmon"
version = "0.3.0"
description = "Sequential calibration monitor for probabilistic forecasts"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib"]
examples = ["matplotlib", "scipy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["pitmon"]
