[project]
name = "pitmon"
version = "0.4.0"
description = "Anytime-valid calibration monitoring for probabilistic predictions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tristan Farran"},
]
keywords = ["calibration", "monitoring", "sequential", "anytime-valid", "e-values"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]
examples = [
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
